--- a/views/empty.hbs
+++ b/views/empty.hbs
@@ -1,2 +1,7 @@
-Заданий нет
-<a href="/">(К списку заданий)</a>
+<h2>Готово</h2>
+
+<div class="pure-g">
+  <div class="pure-u-1">
+    <p>Спасибо! Мы получили от вас все необходимые ответы и в ближайшее время займёмся их обработкой. Возможно, в <a href="/">списке процессов разметки</a> есть ещё задания.</p>
+  </div>
+</div>
