--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,1 +1,7 @@
-Произошла ошибочка :(
+<h2>Не может быть</h2>
+
+<div class="pure-g">
+  <div class="pure-u-1">
+    <p>Произошла ошибка.</p>
+  </div>
+</div>
