--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -1,14 +1,28 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title>Boyarin</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Boyarin</title>
+  <link rel="stylesheet" href="//yui.yahooapis.com/pure/0.6.0/pure-min.css"/>
+  <link rel="stylesheet" href="/style.css"/>
+  <link rel="shortcut icon" href="/favicon.ico"/>
 </head>
 <body>
 
-{{#if user}}<div><a href="/auth/logout">logout</a></div>{{/if}}
+<div id="content">
+
+{{#if user}}<div class="logout"><a class="pure-button" href="/auth/logout">Выйти</a></div>{{/if}}
+
+<h1>Интерфейс разметки</h1>
 
 {{{body}}}
+
+</div>
+
+<link rel="stylesheet" property="stylesheet" type="text/css" media="all" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<link rel="stylesheet" property="stylesheet" type="text/css" media="all" href="//yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css"/>
 
 </body>
 </html>
