--- a/views/task.hbs
+++ b/views/task.hbs
@@ -1,14 +1,35 @@
-<a href="/">К списку заданий</a>
-{{#if allocation.task}}
-    <p>{{allocation.task.description}}</p>
-    <form method="POST" action="/{{process}}">
-        <input name="id" type="hidden" value="{{allocation.task.id}}"/>
-        <ul>
-            {{#each allocation.task.answers}}
-                <li><label><input name="answers" type="{{../inputType}}" value="{{this}}"/>{{this}}</label></li>
-            {{/each}}
-        </ul>
-        <button>submit</button>
+<h2>Процесс "{{allocation.task.process}}"</h2>
+
+<div class="pure-g">
+  <div class="pure-u-1">
+    <form class="pure-form pure-form-stacked" method="POST" action="/{{process}}">
+        <fieldset>
+            <input name="id" type="hidden" value="{{allocation.task.id}}"/>
+
+            <div class="task">
+                <div class="description">
+                    {{{allocation.task.descriptionHTML}}}
+                </div>
+
+                {{#each allocation.task.answers}}
+                    <label class="pure-{{../inputType}}">
+                        <input type="{{../inputType}}" name="answers" value="{{this}}">
+                        {{this}}
+                    </label>
+                {{/each}}
+
+                <div class="pure-g">
+                    <div class="pure-u-1 pure-u-md-2-3">
+                        <p class="hint">Осталось не более {{allocation.taskRemaining}} заданий из {{allocation.taskCount}}.</p>
+                    </div>
+                    <div class="pure-u-1 pure-u-md-1-3">
+                        <button type="submit" class="pure-button pure-button-primary">Отправить</button>
+                    </div>
+                </div>
+            </div>
+        </fieldset>
     </form>
-    <p>Осталось не более {{allocation.taskRemaining}} заданий из {{allocation.taskCount}}.</p>
-{{/if}}
+
+    <p>К <a href="/">списку процессов разметки</a> можно вернуться в любой момент.</p>
+  </div>
+</div>
