Display validation errors

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,12 +1,15 @@
 <h2>Информация</h2>
 
 <div class="pure-g">
-  <div class="pure-u-1">
-    <p><strong>Boyarin</strong> &mdash; интерфейс разметки при помощи краудсорсинга.</p>
-    <p>Более подробные сведения доступны на NLPub: <a href="https://nlpub.ru/Mechanical_Tsar">https://nlpub.ru/Mechanical_Tsar</a>. При использовании данного программного обеспечения в научной работе следует цитировать следующую статью.</p>
-    <ul>
-      <li>Ustalov, D.: <a href="http://dx.doi.org/10.15514/ISPRAS-2015-27%283%29-25">A Crowdsourcing Engine for Mechanized Labor</a>. Proceedings of the Institute for System Programming, Vol. 27(3), 351–364 (2015)</p>
-    </ul>
-    <p>К <a href="/">списку процессов разметки</a> можно вернуться в любой момент.</p>
-  </div>
+<div class="pure-u-1">
+  <p><strong>Boyarin</strong> &mdash; интерфейс разметки при помощи краудсорсинга.</p>
+  <p>
+    Более подробные сведения доступны на NLPub: <a href="https://nlpub.ru/Mechanical_Tsar">https://nlpub.ru/Mechanical_Tsar</a>.
+    При использовании данного программного обеспечения в научной работе следует цитировать следующую статью.
+  </p>
+  <ul>
+    <li>Ustalov, D.: <a href="http://dx.doi.org/10.15514/ISPRAS-2015-27%283%29-25">A Crowdsourcing Engine for Mechanized Labor</a>. Proceedings of the Institute for System Programming, Vol. 27(3), 351–364 (2015)</li>
+  </ul>
+  <p>К <a href="/">списку процессов разметки</a> можно вернуться в любой момент.</p>
+</div>
 </div>
