--- a/views/disabled.hbs
+++ b/views/disabled.hbs
@@ -1,14 +1,17 @@
 <h2>Обед</h2>
 
 <div class="pure-g">
-  <div class="pure-u-1">
-    <p>У нас пока тихо. Посвятите свободное время другим полезным краудсорсинговым проектам, но не уходите слишком далеко.</p>
+<div class="pure-u-1">
+  <p>
+    У нас пока тихо. Посвятите свободное время другим полезным краудсорсинговым проектам,
+    но не уходите слишком далеко.
+  </p>
 
-    <ul>
-        <li><a href="http://russianword.net/">Yet Another RussNet</a></li>
-        <li><a href="http://opencorpora.org/">OpenCorpora</a></li>
-        <li><a href="https://nlpub.ru/">NLPub</a></li>
-        <li><a href="https://github.com/dustalov/mtsar">Mechanical Tsar</a></li>
-    </ul>
-  </div>
+  <ul>
+    <li><a href="http://russianword.net/">Yet Another RussNet</a></li>
+    <li><a href="http://opencorpora.org/">OpenCorpora</a></li>
+    <li><a href="https://nlpub.ru/">NLPub</a></li>
+    <li><a href="https://github.com/dustalov/mtsar">Mechanical Tsar</a></li>
+  </ul>
+</div>
 </div>
