--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,10 +1,15 @@
 <h2>Аутентификация</h2>
 
 <div class="pure-g">
-  <div class="pure-u-1">
-    <p>Разметка начинается со входа через социальные сети. Это нужно для того, чтобы не назначить вам повторяющиеся задания.</p>
-    <a class="pure-button color-facebook" href="/auth/fb"><i class="fa fa-facebook-official"></i> Facebook</a>
-    <a class="pure-button color-vk" href="/auth/vk"><i class="fa fa-vk"></i> ВКонтакте</a>
-    <p>Краткая справка о данном ресурсе представлена на странице «<a href="/about">Информация</a>».</p>
-  </div>
+<div class="pure-u-1">
+  <p>
+    Разметка начинается со входа через социальные сети.
+    Это нужно для того, чтобы не назначить вам повторяющиеся задания.
+  </p>
+  <a class="pure-button color-facebook" href="/auth/fb"><i class="fa fa-facebook-official"></i> Facebook</a>
+  <a class="pure-button color-vk" href="/auth/vk"><i class="fa fa-vk"></i> ВКонтакте</a>
+  <p>
+    Краткая справка о данном ресурсе представлена на странице &laquo;<a href="/about">Информация</a>&raquo;.
+  </p>
+</div>
 </div>
