--- a/views/task.hbs
+++ b/views/task.hbs
@@ -1,35 +1,44 @@
 <h2>Процесс "{{allocation.task.process}}"</h2>
 
 <div class="pure-g">
-  <div class="pure-u-1">
-    <form class="pure-form pure-form-stacked" method="POST" action="/{{process}}">
-        <fieldset>
-            <input name="id" type="hidden" value="{{allocation.task.id}}"/>
+<div class="pure-u-1">
+<form class="pure-form pure-form-stacked" method="POST" action="/{{process}}">
+  <fieldset>
+    <input name="id" type="hidden" value="{{allocation.task.id}}"/>
 
-            <div class="task">
-                <div class="description">
-                    {{{allocation.task.descriptionHTML}}}
-                </div>
+    <div class="task">
+      <div class="description">
+        {{{allocation.task.descriptionHTML}}}
+      </div>
 
-                {{#each allocation.task.answers}}
-                    <label class="pure-{{../inputType}}">
-                        <input type="{{../inputType}}" name="answers" value="{{this}}">
-                        {{this}}
-                    </label>
-                {{/each}}
+      {{#each allocation.task.answers}}
+        <label class="pure-{{../inputType}}">
+            <input type="{{../inputType}}" name="answers" value="{{this}}">
+            {{this}}
+        </label>
+      {{/each}}
 
-                <div class="pure-g">
-                    <div class="pure-u-1 pure-u-md-2-3">
-                        <p class="hint">Осталось не более {{allocation.taskRemaining}} заданий из {{allocation.taskCount}}.</p>
-                    </div>
-                    <div class="pure-u-1 pure-u-md-1-3">
-                        <button type="submit" class="pure-button pure-button-primary">Отправить</button>
-                    </div>
-                </div>
-            </div>
-        </fieldset>
-    </form>
+      <div class="pure-g">
+        {{#if errors}}
+        <div class="pure-u-1 errors">
+          <ul class="fa-ul">
+            {{#each errors}}
+              <li><i class="fa-li fa fa-exclamation"></i>{{this}}</li>
+            {{/each}}
+          </ul>
+        </div>
+        {{/if}}
+        <div class="pure-u-1 pure-u-md-2-3">
+          <p class="hint">Осталось не более {{allocation.taskRemaining}} заданий из {{allocation.taskCount}}.</p>
+        </div>
+        <div class="pure-u-1 pure-u-md-1-3">
+          <button type="submit" class="pure-button pure-button-primary">Отправить</button>
+        </div>
+      </div>
+    </div>
+  </fieldset>
+</form>
 
-    <p>К <a href="/">списку процессов разметки</a> можно вернуться в любой момент.</p>
-  </div>
+<p>К <a href="/">списку процессов разметки</a> можно вернуться в любой момент.</p>
+</div>
 </div>
