Everybody loves Font Awesome Icons

--- a/views/task.hbs
+++ b/views/task.hbs
@@ -32,7 +32,7 @@
           <p class="hint">Осталось не более {{allocation.taskRemaining}} заданий из {{allocation.taskCount}}.</p>
         </div>
         <div class="pure-u-1 pure-u-md-1-3">
-          <button type="submit" class="pure-button pure-button-primary">Отправить</button>
+          <button type="submit" class="pure-button pure-button-primary">Отправить <i class="fa fa-arrow-right"></i></button>
         </div>
       </div>
     </div>
