--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -13,7 +13,7 @@
 
 <div id="content">
 
-{{#if user}}<div class="logout"><a class="pure-button" href="/auth/logout">Выйти</a></div>{{/if}}
+{{#if user}}<div class="logout"><a class="pure-button" href="/auth/logout"><i class="fa fa-sign-out"></i> Выйти</a></div>{{/if}}
 
 <h1>Интерфейс разметки</h1>
 
