Make it possible to "skip" a task

--- a/views/task.hbs
+++ b/views/task.hbs
@@ -39,6 +39,8 @@
   </fieldset>
 </form>
 
+<p>Если задание показалось сложным, то кнопка <a class="pure-button" href="/{{process}}"><i class="fa fa-repeat"></i> Повторить</a> может помочь.</p>
+
 <p>К <a href="/">списку процессов разметки</a> можно вернуться в любой момент.</p>
 </div>
 </div>
