--- a/views/task.hbs
+++ b/views/task.hbs
@@ -1,45 +1,47 @@
-<h2>Процесс "{{allocation.task.process}}"</h2>
+<h2>Процесс "{{process.id}}"</h2>
 
 <div class="pure-g">
 <div class="pure-u-1">
-<form class="pure-form pure-form-stacked" method="POST" action="/{{process}}">
+<form class="pure-form pure-form-stacked" method="POST" action="/{{process.id}}">
   <fieldset>
-    <input name="id" type="hidden" value="{{allocation.task.id}}"/>
+    {{#each allocation.tasks}}
+      <div class="task">
+        <input name="task" type="hidden" value="{{id}}"/>
 
-    <div class="task">
-      <div class="description">
-        {{{allocation.task.descriptionHTML}}}
+        <div class="description">
+          {{{descriptionHTML}}}
+        </div>
+
+        {{#each answers}}
+          <label class="pure-{{../inputType}}">
+              <input type="{{../inputType}}" name="answers[{{../id}}]" value="{{value}}"{{#if checked}} checked{{/if}}>
+              {{value}}
+          </label>
+        {{/each}}
       </div>
+    {{/each}}
 
-      {{#each allocation.task.answers}}
-        <label class="pure-{{../inputType}}">
-            <input type="{{../inputType}}" name="answers" value="{{this}}">
-            {{this}}
-        </label>
-      {{/each}}
-
-      <div class="pure-g">
-        {{#if errors}}
-        <div class="pure-u-1 errors">
-          <ul class="fa-ul">
-            {{#each errors}}
-              <li><i class="fa-li fa fa-exclamation"></i>{{this}}</li>
-            {{/each}}
-          </ul>
-        </div>
-        {{/if}}
-        <div class="pure-u-1 pure-u-md-2-3">
-          <p class="hint">Осталось не более {{allocation.taskRemaining}} заданий из {{allocation.taskCount}}.</p>
-        </div>
-        <div class="pure-u-1 pure-u-md-1-3">
-          <button type="submit" class="pure-button pure-button-primary">Отправить <i class="fa fa-arrow-right"></i></button>
-        </div>
+    <div class="pure-g">
+      {{#if errors}}
+      <div class="pure-u-1 errors">
+        <ul class="fa-ul">
+          {{#each errors}}
+            <li><i class="fa-li fa fa-exclamation"></i>{{this}}</li>
+          {{/each}}
+        </ul>
+      </div>
+      {{/if}}
+      <div class="pure-u-1 pure-u-md-2-3">
+        <p class="hint">Осталось не более {{allocation.taskRemaining}} заданий из {{allocation.taskCount}}.</p>
+      </div>
+      <div class="pure-u-1 pure-u-md-1-3">
+        <button type="submit" class="pure-button pure-button-primary">Отправить <i class="fa fa-arrow-right"></i></button>
       </div>
     </div>
   </fieldset>
 </form>
 
-<p>Если задание показалось сложным, то кнопка <a class="pure-button" href="/{{process}}"><i class="fa fa-repeat"></i> Повторить</a> может помочь.</p>
+<p>Если задание показалось сложным, то кнопка <a class="pure-button" href="/{{process.id}}"><i class="fa fa-repeat"></i> Повторить</a> может помочь.</p>
 
 <p>К <a href="/">списку процессов разметки</a> можно вернуться в любой момент.</p>
 </div>
