Better colors and paddings

--- a/views/russe.hbs
+++ b/views/russe.hbs
@@ -2,15 +2,19 @@
 
 <style type="text/css">
 .task a, .task a:hover, .task a:visited, .task a:active {
-  color: #0A1A27;
+  color: #07485B;
+}
+
+.task {
+  padding-bottom: 0.5em;
 }
 
 .task:nth-child(even) {
-  background-color: #F3F4F4;
+  background-color: #FAFAFA;
 }
 
 .task:nth-child(odd) {
-  background-color: #FFFFFF;
+  background-color: #FCFCFC;
 }
 
 @media screen and (min-width: 48em) {
@@ -19,11 +23,11 @@
   }
 
   .task:nth-child(1), .task:nth-child(4), .task:nth-child(5) {
-    background-color: #F3F4F4;
+    background-color: #FAFAFA;
   }
 
   .task:nth-child(2), .task:nth-child(3), .task:nth-child(6) {
-    background-color: #FFFFFF;
+    background-color: #FCFCFC;
   }
 }
 
