Make the colors more contrast

--- a/views/russe.hbs
+++ b/views/russe.hbs
@@ -10,11 +10,11 @@
 }
 
 .task:nth-child(even) {
-  background-color: #FAFAFA;
+  background-color: #F9F9F9;
 }
 
 .task:nth-child(odd) {
-  background-color: #FCFCFC;
+  background-color: #FDFDFD;
 }
 
 @media screen and (min-width: 48em) {
@@ -23,11 +23,11 @@
   }
 
   .task:nth-child(1), .task:nth-child(4), .task:nth-child(5) {
-    background-color: #FAFAFA;
+    background-color: #F9F9F9;
   }
 
   .task:nth-child(2), .task:nth-child(3), .task:nth-child(6) {
-    background-color: #FCFCFC;
+    background-color: #FDFDFD;
   }
 }
 
