--- a/public/style.css
+++ b/public/style.css
@@ -5,8 +5,13 @@
 }
 
 .task {
-  max-width: 80%;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 48em) {
+  .task {
+    max-width: 80%;
+  }
 }
 
 .task .description {
