Better RUSSE task description

--- a/views/russe.hbs
+++ b/views/russe.hbs
@@ -16,7 +16,15 @@
 }
 </style>
 
-<p class="hint">Перед вами представлены пары слов. Пожалуйста, выберите &laquo;связаны&raquo;, если <strong>слова в паре связаны по смыслу</strong>. В противном случае выберите &laquo;не связаны&raquo;.</p>
+<div class="hint">
+  <p>В данной задаче, следует считать, что слова <strong>связаны по смыслу</strong>:</p>
+  <ul>
+  <li>если они являются <em>синонимами</em>, к примеру как &laquo;гиппопотам&raquo; и &laquo;бегемот&raquo;;</li>
+  <li>если они обозначают <em>подобные понятия</em>, такие как &laquo;фрукт&raquo; и &laquo;яблоко&raquo; или &laquo;яблоко&raquo; и &laquo;груша&raquo;;</li>
+  <li>если слова <em>тематически связаны</em>, например слова &laquo;колесо&raquo; и &laquo;тормоз&raquo;.</li>
+  </ul>
+  <p>Слова <strong>не связаны</strong>, если между ними нет очевидной семантической связи, например, как для слов &laquo;машина&raquo; и &laquo;огурец&raquo;.</p>
+</div>
 
 <datalist id="answers">
   <option value="0">0</option>
