--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -4,10 +4,18 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Boyarin</title>
+  <title>Boyarin — RUSSE</title>
   <link rel="stylesheet" href="//yui.yahooapis.com/pure/0.6.0/pure-min.css"/>
   <link rel="stylesheet" href="/style.css"/>
   <link rel="shortcut icon" href="/favicon.ico"/>
+  <meta property="og:title" content="RUSSE" />
+  <meta property="og:description" content="The RUSSE competition will perform a systematic comparison and evaluation of the baseline and the most recent approaches to semantic similarity." />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:url" content="http://crowd.russe.nlpub.ru/" />
+  <meta property="og:image" content="http://russe.nlpub.ru/nlpub.png" />
+  <meta property="og:image:width" content="135" />
+  <meta property="og:image:height" content="135" />
 </head>
 <body>
 
