--- a/views/russe.hbs
+++ b/views/russe.hbs
@@ -17,7 +17,7 @@
 </style>
 
 <div class="hint">
-  <p>В данной задаче, следует считать, что слова <strong>связаны по смыслу</strong>:</p>
+  <p>В данной задаче следует считать, что слова <strong>связаны по смыслу</strong>:</p>
   <ul>
   <li>если они являются <em>синонимами</em>, к примеру как &laquo;гиппопотам&raquo; и &laquo;бегемот&raquo;;</li>
   <li>если они обозначают <em>подобные понятия</em>, такие как &laquo;фрукт&raquo; и &laquo;яблоко&raquo; или &laquo;яблоко&raquo; и &laquo;груша&raquo;;</li>
