--- a/views/russe.hbs
+++ b/views/russe.hbs
@@ -21,7 +21,8 @@
   <ul>
   <li>если они являются <em>синонимами</em>, к примеру как &laquo;гиппопотам&raquo; и &laquo;бегемот&raquo;;</li>
   <li>если они обозначают <em>подобные понятия</em>, такие как &laquo;фрукт&raquo; и &laquo;яблоко&raquo; или &laquo;яблоко&raquo; и &laquo;груша&raquo;;</li>
-  <li>если слова <em>тематически связаны</em>, например слова &laquo;колесо&raquo; и &laquo;тормоз&raquo;.</li>
+  <li>если слова <em>тематически связаны</em>, например слова &laquo;колесо&raquo; и &laquo;тормоз&raquo;;</li>
+  <li>если слова образуют <em>устойчивое сочетание</em>, например: &laquo;оборудование&raquo; и &laquo;монтировать&raquo;.</li>
   </ul>
   <p>Слова <strong>не связаны</strong>, если между ними нет очевидной семантической связи, например, как для слов &laquo;машина&raquo; и &laquo;огурец&raquo;.</p>
 </div>
