A link to the thesaurus

--- a/views/processes.hbs
+++ b/views/processes.hbs
@@ -1,5 +1,9 @@
 <h2>Процессы разметки</h2>
 
+<div class="hint">
+  <p>Мы сделали <a href="http://maggie.lt.informatik.tu-darmstadt.de/jobimtext/documentation/distributional-semantics/">дистрибутивный теазаурус</a> русского языка, который будет скоро доступен под свободной лицензией. Помогите оценить его качество перед публикацией и внесите свой вклад в науку!</p>
+</div>
+
 <div class="pure-g">
 <div class="pure-u-1">
   <table class="pure-table pure-table-striped width-max">
