Fix the metadata

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -4,12 +4,12 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Разметка данных RUSSE</title>
+  <title>Разметка данных</title>
   <link rel="stylesheet" href="//yui.yahooapis.com/pure/0.6.0/pure-min.css"/>
   <link rel="stylesheet" href="/style.css"/>
   <link rel="shortcut icon" href="/favicon.ico"/>
-  <meta property="og:title" content="Разметка данных RUSSE" />
-  <meta property="og:description" content="В рамках RUSSE проводится систематическое исследование систем оценки семантической близости русских слов." />
+  <meta property="og:title" content="Разметка данных" />
+  <meta property="og:description" content="Разметка данных позволяет получить машиночитаемые данные для различных задач." />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="ru_RU" />
   <meta property="og:url" content="http://crowd.russe.nlpub.ru/" />
