Better disabled.hbs

--- a/views/disabled.hbs
+++ b/views/disabled.hbs
@@ -3,8 +3,12 @@
 <div class="pure-g">
 <div class="pure-u-1">
   <p>
-    У нас пока тихо. Посвятите свободное время другим полезным краудсорсинговым проектам,
-    но не уходите слишком далеко.
+    Мы благодарим всех, кто принял участие в разметке! Результаты работы скоро будут опубликованы
+    под открытой лицензией.
+  </p>
+
+  <p>
+    Посвятите свободное время другим полезным краудсорсинговым проектам, но не уходите слишком далеко.
   </p>
 
   <ul>
