Improve the GSM view and show the worker ID if possible

--- a/views/empty.hbs
+++ b/views/empty.hbs
@@ -6,5 +6,8 @@
     Спасибо! Мы получили от вас все необходимые ответы и в ближайшее время займёмся их обработкой.
     Возможно, в <a href="/">списке процессов разметки</a> есть ещё задания.
   </p>
+  <p>
+    Ваш идентификатор: <strong>{{worker}}</strong>.
+  </p>
 </div>
 </div>
