--- a/views/genus-species.hbs
+++ b/views/genus-species.hbs
@@ -38,7 +38,7 @@
           <tbody>
           {{#each allocation.tasks}}
             <tr class="align-center">
-                <td style="font-size: 90%">{{{descriptionHTML}}}</td>
+                <td class="task" style="font-size: 90%">{{{descriptionHTML}}}</td>
                 <td>
                   <input name="task" type="hidden" value="{{id}}"/>
                   <input class="width-max" type="range" list="answers" min="0" max="1" value="{{answer}}" name="answers[{{id}}]">
@@ -65,7 +65,7 @@
       </div>
       {{/if}}
       <div class="pure-u-2-3">
-        <p class="hint">От вас мы можем принять не более {{allocation.taskRemaining}} ответов.</p>
+        <p class="hint">Ваш идентификатор: <strong>{{allocation.worker.id}}</strong>. В базе имеется {{allocation.taskRemaining}} свободных заданий.</p>
       </div>
       <div class="pure-u-1-3 align-right">
         <button type="submit" class="pure-button pure-button-primary">Отправить <i class="fa fa-arrow-right"></i></button>
