--- a/views/russe.hbs
+++ b/views/russe.hbs
@@ -76,7 +76,7 @@
       </div>
       {{/if}}
       <div class="pure-u-2-3">
-        <p class="hint">В эксперименте участвует {{allocation.taskCount}} пар слов. От вас мы можем принять не более {{allocation.taskRemaining}} пар.</p>
+        <p class="hint">Ваш идентификатор: <strong>{{allocation.worker.id}}</strong>. В базе имеется {{allocation.taskRemaining}} свободных заданий.</p>
       </div>
       <div class="pure-u-1-3 align-right">
         <button type="submit" class="pure-button pure-button-primary">Отправить <i class="fa fa-arrow-right"></i></button>
