--- a/views/task.hbs
+++ b/views/task.hbs
@@ -32,7 +32,7 @@
       </div>
       {{/if}}
       <div class="pure-u-1 pure-u-md-2-3">
-        <p class="hint">Осталось не более {{allocation.taskRemaining}} заданий из {{allocation.taskCount}}.</p>
+        <p class="hint">Ваш идентификатор: <strong>{{allocation.worker.id}}</strong>. В базе имеется {{allocation.taskRemaining}} свободных заданий.</p>
       </div>
       <div class="pure-u-1 pure-u-md-1-3">
         <button type="submit" class="pure-button pure-button-primary">Отправить <i class="fa fa-arrow-right"></i></button>
