--- a/views/disabled.hbs
+++ b/views/disabled.hbs
@@ -1,21 +1,11 @@
 <h2>Обед</h2>
 
-<div class="pure-g">
-<div class="pure-u-1">
-  <p>
-    Мы благодарим всех, кто принял участие в разметке! Результаты работы скоро будут опубликованы
-    под открытой лицензией.
-  </p>
+<p>Мы благодарим всех, кто принял участие в разметке! Результаты работы скоро будут опубликованы под открытой лицензией.</p>
+<p>Посвятите свободное время другим полезным краудсорсинговым проектам, но не уходите слишком далеко.</p>
 
-  <p>
-    Посвятите свободное время другим полезным краудсорсинговым проектам, но не уходите слишком далеко.
-  </p>
-
-  <ul>
+<ul>
     <li><a href="http://russianword.net/">Yet Another RussNet</a></li>
     <li><a href="http://opencorpora.org/">OpenCorpora</a></li>
     <li><a href="https://nlpub.ru/">NLPub</a></li>
     <li><a href="https://github.com/dustalov/mtsar">Mechanical Tsar</a></li>
-  </ul>
-</div>
-</div>
+</ul>
