--- a/views/stage/task.hbs
+++ b/views/stage/task.hbs
@@ -1,22 +1,31 @@
 <h2>Этап разметки "{{stage.id}}"</h2>
 
-<form class="pure-form" method="POST" action="/stage/{{stage.id}}">
+<form
+    class="pure-form"
+    method="POST"
+    action="/stage/{{stage.id}}"
+    onsubmit="sendAnswers('{{taskIdList}}')">
     
     {{#each taskList.tasks}}
         <fieldset>
             <input name="task" type="hidden" value="{{id}}"/>
-            <div class="description">{{{description}}}</div>
+            <div
+                class="description"
+                onmouseover="hoverText('task_{{id}}')">
+                {{{description}}}
+            </div>
 
 
             {{#each answers}}
-                <label>
+                <label onmouseover="hoverAnswer('{{value}}')">
                     <input 
                         {{#if ../multiple}}
                             type="checkbox"
                         {{else}}
                             type="radio"
                         {{/if}}
-                        name="answers[{{../id}}]" value="{{value}}" 
+                        name="answers[{{../id}}]" value="{{value}}"
+                        onclick="clickAnswer('{{value}}')" 
                         {{#if checked}} 
                             checked  
                         {{/if}} />
@@ -34,7 +43,10 @@
         <button type="submit" class="pure-button pure-button-primary">
             Отправить <i class="fa fa-arrow-right"></i>
         </button>
-        <a href="/stage/{{stage.id}}" class="pure-button">
+        <a 
+            href="/stage/{{stage.id}}"
+            class="pure-button" 
+            onclick="skipTask('{{taskIdList}}')">
             Следующее задание <i class="fa fa-repeat"></i>
         </a>
     </fieldset>
