--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,13 +4,13 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    
+
     <title>Разметка данных - Боярин</title>
-    
+
     <link rel="stylesheet" href="/purecss/build/pure-min.css"/>
     <link rel="stylesheet" href="/style.css"/>
     <link rel="shortcut icon" href="/favicon.ico"/>
-    
+
     <meta property="og:title" content="Разметка данных" />
     <meta property="og:description" content="Разметка данных позволяет получить машиночитаемые данные для различных задач." />
     <meta property="og:type" content="website" />
@@ -19,10 +19,13 @@
     <meta property="og:image" content="http://russe.nlpub.ru/nlpub.png" />
     <meta property="og:image:width" content="135" />
     <meta property="og:image:height" content="135" />
+    {{#if piwik}}
+        {{> piwik}}
+    {{/if}}
 </head>
 <body>
     <div class="content">
-        {{> header}}  
+        {{> header}}
         {{{body}}}
     </div>
 
