--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -20,7 +20,9 @@
     <meta property="og:image:width" content="135" />
     <meta property="og:image:height" content="135" />
     {{#if piwik}}
-        {{> piwik}}
+        {{#if worker.id}}
+            {{> piwik}}
+        {{/if}}
     {{/if}}
 </head>
 <body>
