fixies: mouseover -> mouseenter, more - home page message + hoverDescription

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,10 +1,10 @@
 <h2>Этапы разметки</h2>
 
-<div>
+{{!--<div>
     <p>
         Мы сделали <a href="http://maggie.lt.informatik.tu-darmstadt.de/jobimtext/documentation/distributional-semantics/">дистрибутивный тезаурус</a> русского языка, который будет скоро доступен под свободной лицензией. Помогите оценить его качество перед публикацией и внесите свой вклад в науку!
     </p>
-</div>
+</div>--}}
 
 <table class="pure-table pure-table-striped width-max">
     <thead>
