--- a/views/stage/russe.hbs
+++ b/views/stage/russe.hbs
@@ -1,14 +1,15 @@
 <h2>Этап разметки "RUSSE"</h2>
 
-<p>В данной задаче следует считать, что слова <strong>связаны по смыслу</strong>:</p>
-<ul>
-    <li>если они являются <em>синонимами</em>, к примеру как &laquo;гиппопотам&raquo; и &laquo;бегемот&raquo;</li>
-    <li>если они обозначают <em>подобные понятия</em>, такие как &laquo;фрукт&raquo; и &laquo;яблоко&raquo; или &laquo;яблоко&raquo; и &laquo;груша&raquo;;</li>
-    <li>если слова <em>тематически связаны</em>, например слова &laquo;колесо&raquo; и &laquo;тормоз&raquo;;</li>
-    <li>если слова образуют <em>устойчивое сочетание</em>, например: &laquo;оборудование&raquo; и &laquo;монтировать&raquo;.</li>
-</ul>
-<p>Слова <strong>не связаны</strong>, если между ними нет очевидной семантической связи, например, как для слов &laquo;машина&raquo; и &laquo;огурец&raquo;.</p>
-
+<div onmouseenter="hoverDescription('{{stage.id}}')">
+    <p>В данной задаче следует считать, что слова <strong>связаны по смыслу</strong>:</p>
+    <ul>
+        <li>если они являются <em>синонимами</em>, к примеру как &laquo;гиппопотам&raquo; и &laquo;бегемот&raquo;</li>
+        <li>если они обозначают <em>подобные понятия</em>, такие как &laquo;фрукт&raquo; и &laquo;яблоко&raquo; или &laquo;яблоко&raquo; и &laquo;груша&raquo;;</li>
+        <li>если слова <em>тематически связаны</em>, например слова &laquo;колесо&raquo; и &laquo;тормоз&raquo;;</li>
+        <li>если слова образуют <em>устойчивое сочетание</em>, например: &laquo;оборудование&raquo; и &laquo;монтировать&raquo;.</li>
+    </ul>
+    <p>Слова <strong>не связаны</strong>, если между ними нет очевидной семантической связи, например, как для слов &laquo;машина&raquo; и &laquo;огурец&raquo;.</p>
+</div>
 <form
     class="pure-form"
     method="POST"
@@ -30,23 +31,19 @@
                             <a 
                                 href="https://www.google.com/search?q=%22{{{first}}}%22"
                                 target="_blank"
-                                onmouseover="hoverText('{{../stage.id}}', '{{id}}', '{{first}}')"
-                                onclick="clickText('{{../stage.id}}', '{{id}}', '{{first}}')">
-                                {{first}}
-                            </a>
+                                onmouseenter="hoverText('{{../stage.id}}', '{{id}}', '{{first}}')"
+                                onclick="clickText('{{../stage.id}}', '{{id}}', '{{first}}')">{{first}}</a>
                             и
                             <a 
                                 href="https://www.google.com/search?q=%22{{second}}%22" 
                                 target="_blank"
-                                onmouseover="hoverText('{{../stage.id}}', '{{id}}', '{{second}}')"
-                                onclick="clickText('{{../stage.id}}', '{{id}}', '{{second}}')">
-                                {{second}}
-                            </a>
+                                onmouseenter="hoverText('{{../stage.id}}', '{{id}}', '{{second}}')"
+                                onclick="clickText('{{../stage.id}}', '{{id}}', '{{second}}')">{{second}}</a>
                         </td>
                         <td>
                             <input name="task" type="hidden" value="{{id}}"/>
                             {{#each answers}}
-                                <label onmouseover="hoverAnswer('{{../../stage.id}}', '{{../id}}', '{{value}}')">
+                                <label onmouseenter="hoverAnswer('{{../../stage.id}}', '{{../id}}', '{{value}}')">
                                     <input type="radio"
                                         required 
                                         name="answers[{{../id}}]" 
